--- a/client/public/index.html
+++ b/client/public/index.html
@@ -33,6 +33,7 @@
 </head>
 
 <body>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/5.1.3/pixi.min.js"></script>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <!--
@@ -46,5 +47,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 </body>
+
+
 
 </html>
