--- a/client/src/utils/snakeGame/snakeGame.html
+++ b/client/src/utils/snakeGame/snakeGame.html
@@ -4,14 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Snake Game</title>
-</head>
-<body onload="init();">
-    <div alighn="center">
-        <canvas id="mycanvas"></canvas>
-        <div id="scoreBoard">
-        </div>
-    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/5.1.3/pixi.min.js"></script>
-    <script src="./pixiFunctions.js"></script>
-</body>
+    <script src="./snakeGame.js.js"></script>
+</head>
+    <body>
+        <div id="scoreBoard"></div>
+    </body>
 </html>
