--- a/client/src/utils/snakeGame/snakeGame.html
+++ b/client/src/utils/snakeGame/snakeGame.html
@@ -7,7 +7,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/5.1.3/pixi.min.js"></script>
     <script src="./snakeGame.js"></script>
 </head>
-    <body>
-        <div id="scoreBoard"></div>
-    </body>
+<body>
+    <div id="scoreBoard"></div>
+    <script>
+        
+    </script>
+</body>
 </html>
